--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "axios": "^0.19.0",
+    "cypress": "^3.4.1",
     "webpack-dev-server": "^3.8.0"
   }
 }
